Fourier approximation of time series with ARIMA.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ _build/
 data/
 flake.lock
 flake.nix
+notebooks/submission.csv
 
 # Allow .gitkeep in data directory to keep the project structure
 !data/.gitkeep
